--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "typescript": "^4.2.4"
   }
 }
