--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "@types/shelljs": "^0.8.8",
     "typescript": "^4.2.4"
   }
 }
