--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,16 @@
 {
-    //"extends": "./node_modules/expresswebjs-preset-ts/tsconfig",
-    "compilerOptions": {
-      "esModuleInterop": true,
-      "target": "ES2020",
-      "module": "commonjs",
-      "declaration": true,
-      "baseUrl": "./",
-      "outDir": "./lib",  
-      "rootDir": "./", 
-      "declarationMap": true,
-      "strict": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "**/__tests__/*"]
-  }
+  "extends": "./node_modules/expresswebjs-preset-ts/tsconfig",
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "target": "ES2020",
+    "module": "commonjs",
+    "declaration": true,
+    "baseUrl": "./",
+    "outDir": "./lib",  
+    "rootDir": "./", 
+    "declarationMap": true,
+    "strict": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+  },
+}
