--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maker-console-ts",
-  "version": "1.0.41",
+  "version": "1.0.42",
   "description": "MakerTS is the Typescript version of Maker console which is the command line interface included for ExpressWebJs. Maker exists at the root of your application as the maker script and provides a number of helpful commands that can assist you while you build your application. To view a list of all available Maker commands, you may use the help command.",
   "types": "./lib/src",
   "main": "lib/src/index.js",
@@ -17,6 +17,7 @@
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
     "ora": "^5.1.0",
+    "recursive-copy": "^2.0.13",
     "shelljs": "^0.8.4"
   },
   "devDependencies": {
