--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "inquirer": "^7.3.3",
     "ora": "^5.1.0",
     "recursive-copy": "^2.0.13",
-    "shelljs": "^0.8.4"
+    "shelljs": "^0.8.4",
+    "tsc-watch": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/shelljs": "^0.8.8",
+    "@types/tsc-watch": "^4.2.0",
     "expresswebjs-preset-ts": "^1.0.4",
     "typescript": "^4.2.4"
   }
