--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "maker-console-ts",
-  "version": "2.0.22",
+  "version": "2.0.24",
   "description": "MakerTS v2.0.1 upwards is for version framework version 4. It is the Typescript version of Maker console which is the command line interface included for ExpressWebJs. Maker exists at the root of your application as the maker script and provides a number of helpful commands that can assist you while you build your application. To view a list of all available Maker commands, you may use the help command. Download version < 2.0.12 for ExpressWeb version 4.1",
   "types": "./lib/src",
   "main": "lib/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^6.2.1",
+    "commander": "^11.1.0",
     "dotenv": "^8.2.0",
     "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
